--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -2,3 +2,10 @@
 .fixed-nav-padding {
     padding-top: 62px
 }
+
+//fixed size for svg icons
+.svg-icon {
+    margin-right: 0.5rem;
+    width: 16px;
+    height: 16px;
+}
