--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,29 +1,29 @@
-  {% assign default_paths = site.pages | map: "path" %}
-  {% assign page_paths = site.header_pages | default: default_paths %}
+ {% assign default_paths = site.pages | map: "path" %} 
+ {% assign page_paths = site.header_pages | default: default_paths %}
 
-  {% if page_paths %}
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white shadow-depth-1">
-      <!--TODO shadow only when scrolled-->
-      <div class="container">
-        <a class="navbar-brand" rel="author" href="{{ "/" | relative_url }}">
-          {{ site.title | escape }}
-          <!--TODO add Logo-->
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-lg-end" id="navbarNav">
-          <ul class="navbar-nav">
-            {% for path in page_paths %}
-              {% assign my_page = site.pages | where: "path", path | first %}
-              {% if my_page.title %}
-              <li class="nav-item">
-                <a class="nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-              </li>
-              {% endif %}
-            {% endfor %}
-          </ul>
-        </div>
+<header>
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white shadow-depth-1">
+    <!--TODO shadow only when scrolled-->
+    <div class="container">
+      <a class="navbar-brand" rel="author" href="{{ "/index" | relative_url }}">
+        {{ site.title | escape }}
+        <!--TODO add Logo-->
+      </a>
+      {% if page_paths %}
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+              aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-lg-end" id="navbarNav">
+        <ul class="navbar-nav">
+          {% for path in page_paths %} {% assign my_page = site.pages | where: "path", path | first %} {% if my_page.title %}
+          <li class="nav-item">
+            <a class="nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+          </li>
+          {% endif %} {% endfor %}
+        </ul>
       </div>
-    </nav>
-  {% endif %}
+      {% endif %}
+    </div>
+  </nav>
+</header>
