--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
-<footer>
+<footer class="text-secondary">
     <div class="container border-top mt-5 py-3">
-      <div class="d-flex flex-row align-items-center justify-content-between">
+      <div class="d-flex flex-column flex-md-row align-items-center justify-content-between">
         
-        <div class="d-flex flex-row">
+        <div class="d-flex flex-column flex-lg-row mb-3 mb-md-0">
           {% for network in site.data.social.networks %}
-            <a class="d-flex flex-row align-items-center px-3" href="{{ network.url }}">
+            <a class="font-weight-light d-flex flex-row align-items-center px-3" href="{{ network.url }}">
               <svg class="svg-icon">
                 <use xlink:href="/assets/img/icons.svg#{{ network.code }}"></use>
               </svg>
@@ -13,12 +13,20 @@
           {% endfor %}
         </div>
   
-        <div class="d-flex">
-          <small class="font-weight-light">
-            © Rojas Bachem 
-            Software under <a href="https://choosealicense.com/licenses/mit/">MIT</a> 
-            Content under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0</a>
-          </small>
+        <div class="d-flex flex-column align-items-center align-items-md-end">
+          <div class="font-weight-light">
+              © Axel Rojas Bachem
+          </div>
+          <div class="d-flex flex-column flex-lg-row align-items-center align-items-md-end">
+            <small class="font-weight-light mr-lg-1">
+              Software licensed under
+              <a href="https://choosealicense.com/licenses/mit/">MIT</a>
+            </small>
+            <small class="font-weight-light">
+              Content and Media licensed under
+              <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0</a>
+            </small>
+          </div>
         </div>
       </div>
   
