--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,11 +16,14 @@
       </button>
       <div class="collapse navbar-collapse justify-content-lg-end" id="navbarNav">
         <ul class="navbar-nav">
-          {% for path in page_paths %} {% assign my_page = site.pages | where: "path", path | first %} {% if my_page.title %}
-          <li class="nav-item">
-            <a class="nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-          </li>
-          {% endif %} {% endfor %}
+          {% for path in page_paths %} 
+            {% assign my_page = site.pages | where: "path", path | first %} 
+            {% if my_page.title %}
+              <li class="nav-item">
+                <a class="nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+              </li>
+            {% endif %} 
+          {% endfor %}
         </ul>
       </div>
       {% endif %}
