--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
   
         <div class="d-flex flex-column align-items-center align-items-md-end">
           <div class="font-weight-light">
-              © Axel Rojas Bachem
+              © {{ site.author }}
           </div>
           <div class="d-flex flex-column flex-lg-row align-items-center align-items-md-end">
             <small class="font-weight-light mr-lg-1">
