--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
         
         <div class="d-flex flex-column flex-lg-row mb-3 mb-md-0">
           {% for network in site.data.social.networks %}
-            <a class="font-weight-light d-flex flex-row align-items-center px-3" href="{{ network.url }}">
+            <a class="font-weight-light d-flex flex-row align-items-center px-3" href="{{ network.url }}" target="_blank">
               <svg class="svg-icon">
                 <use xlink:href="/assets/img/icons.svg#{{ network.code }}"></use>
               </svg>
@@ -20,11 +20,11 @@
           <div class="d-flex flex-column flex-lg-row align-items-center align-items-md-end">
             <small class="font-weight-light mr-lg-1">
               Software licensed under
-              <a href="https://choosealicense.com/licenses/mit/">MIT</a>
+              <a href="https://choosealicense.com/licenses/mit/" target="_blank">MIT</a>
             </small>
             <small class="font-weight-light">
               Content and Media licensed under
-              <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0</a>
+              <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC BY-NC-ND 4.0</a>
             </small>
           </div>
         </div>
