--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -5,7 +5,7 @@
 
   <body class="fixed-nav-padding">
 
-    {% include header.html %}
+    {% include navigation.html %}
 
     <main >
       <div class="container">
