--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1,6 +1,12 @@
+// navbar logo
+.logo {
+    width: 35px;
+    height: 35px;
+}
+
 //padding to fixed top nav
 .fixed-nav-padding {
-    margin-top: 70px;
+    margin-top: 75px;
 }
 
 //fixed size for svg icons
