--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,3 +2,8 @@
 layout: master
 ---
 
+<div class="d-flex flex-column flex-md-row justify-content-around my-auto">
+    <img class="home-img" src="{{ "/assets/img/bumpels/bumpel_1.svg" | relative_url }}"/>
+    <img class="home-img" src="{{ "/assets/img/bumpels/bumpel_2.svg" | relative_url }}"/>
+    <img class="home-img" src="{{ "/assets/img/bumpels/bumpel_3.svg" | relative_url }}"/>
+</div>
