--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,4 +1,4 @@
-@import "theme";
+@import "overrides";
 @import "syntax";
 @import "../node_modules/bootstrap/scss/bootstrap";
 @import "utilities";
