--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="text-secondary">
     <div class="container border-top mt-5 py-3">
       <div class="d-flex flex-column flex-md-row align-items-center justify-content-between">
-        
+        <!-- left -->
         <div class="d-flex flex-column flex-lg-row mb-3 mb-md-0">
           {% for network in site.data.social.networks %}
             <a class="font-weight-light d-flex flex-row align-items-center px-3" href="{{ network.url }}" target="_blank">
@@ -12,7 +12,7 @@
             </a>
           {% endfor %}
         </div>
-  
+        <!-- right -->
         <div class="d-flex flex-column align-items-center align-items-md-end">
           <div class="font-weight-light">
               © {{ site.author }}
