--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -4,12 +4,29 @@
     height: 35px;
 }
 
-//padding to fixed top nav
+// padding to fixed top nav
 .fixed-nav-padding {
     margin-top: 75px;
 }
 
-//fixed size for svg icons
+
+// resize bumpels on homepage in md
+@include media-breakpoint-up(sm) {
+    .home-img {
+        width: 30%;
+        height: 30%;
+    }
+}
+@include media-breakpoint-down(sm) {
+    .home-img {
+        margin-left: auto;
+        margin-right: auto;
+        width: 80%;
+        height: 80%;
+    }
+}
+
+// fixed size for svg icons
 .svg-icon {
     margin-right: 0.5rem;
     width: 16px;
