--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "de" }}">
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
   {% include head.html %}
 
-  <body class="fixed-nav-padding">
-
-    {% include navigation.html %}
-
-    <main >
+  <body class="d-flex flex-column align-content-center fixed-nav-padding">
+    <div class="mb-auto">
+      {% include navigation.html %}
+    </div>
+    <main>
       <div class="container">
         {{ content }}
       </div>
     </main>
-
-    {% include footer.html %}
-
+    <div class="mt-auto">
+      {% include footer.html %}
+    </div>
   </body>
 
   {% include javascript.html %}
