--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1,3 +1,11 @@
+html {
+    height: 100%;
+}
+body {
+    height: 100%;
+    min-height: 100%;
+}
+
 // navbar logo
 .logo {
     width: 35px;
@@ -6,9 +14,8 @@
 
 // padding to fixed top nav
 .fixed-nav-padding {
-    margin-top: 75px;
+    padding-top: 75px;
 }
-
 
 // resize bumpels on homepage in md
 @include media-breakpoint-up(sm) {
