--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -17,7 +17,7 @@ body {
     padding-top: 75px;
 }
 
-// resize bumpels on homepage in md
+// resize bumpels on homepage after md
 @include media-breakpoint-up(sm) {
     .home-img {
         width: 30%;
@@ -33,8 +33,8 @@ body {
     }
 }
 
-// fixed size for svg icons
-.svg-icon {
+// fixed size for social icons
+.social-icon {
     margin-right: 0.5rem;
     width: 16px;
     height: 16px;
