theme for footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="text-secondary">
+<footer class="footer">
     <div class="container border-top mt-5 py-3">
       <div class="d-flex flex-column flex-md-row align-items-center justify-content-between">
         <!-- left -->
