--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,5 +1,5 @@
 @import "overrides";
-@import "syntax";
 @import "../node_modules/bootstrap/scss/bootstrap";
+@import "syntax";
 @import "utilities";
-@import "layout";
+@import "theme";
