small css improvments

--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body class="d-flex flex-column align-content-center fixed-nav-padding">
+  <body class="d-flex flex-column align-content-center">
     <div class="mb-auto">
       {% include navigation.html %}
     </div>
