--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -5,17 +5,13 @@ html {
 body {
     height: 100%;
     min-height: 100%;
+    padding-top: 75px; //padding to fixed top nav
 }
 
-// navbar logo
+// navbar logo size 
 .logo {
     width: 35px;
     height: 35px;
-}
-
-// padding to fixed top nav
-.fixed-nav-padding {
-    padding-top: 75px;
 }
 
 // resize bumpels on homepage after md
