--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,7 +5,7 @@
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
     <div class="container">
       <a class="navbar-brand" rel="author" href="{{ "/index" | relative_url }}">
-        <img src="{{ "assets/img/logo.png" | relative_url }}" class="logo" alt="{{site.title | escape }}">
+        <img src="{{ "assets/img/logo.svg" | relative_url }}" class="logo" alt="{{site.title | escape }}">
       </a>
       {% if page_paths %}
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
