--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -30,20 +30,22 @@ body {
     }
 }
 
-// footer text color
+// footer
 .footer {
-    color: $gray-500;
+    // text
+    font-weight: $font-weight-light;
+    color: $gray-600;
     a {
-        color: $gray-700;
-        :hover {
-            color: $gray-900;
-        } 
+        color: $gray-800;
+        fill: $gray-800;
+    }
+
+    // fixed size for social icons
+    .social-icon {
+        margin-right: 0.5rem;
+        width: 16px;
+        height: 16px;
     }
 }
 
-// fixed size for social icons
-.social-icon {
-    margin-right: 0.5rem;
-    width: 16px;
-    height: 16px;
-}
+
