--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -16,15 +16,15 @@ body {
 
 // resize bumpels on homepage after md
 .home-img {
-    @include media-breakpoint-up(sm) {
-        width: 30%;
-        height: 30%;
-    }
     @include media-breakpoint-down(sm) {
         margin-left: auto;
         margin-right: auto;
         width: 80%;
         height: 80%;
+    }
+    @include media-breakpoint-up(sm) {
+        width: 30%;
+        height: 30%;
     }
 }
 
@@ -39,6 +39,26 @@ body {
     }
     @include media-breakpoint-between(sm, md) {
         column-count: 2;
+    }
+}
+
+// image on single news page
+.news-img-container {
+    @include media-breakpoint-down(md) {
+        max-width: 400px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 10px;
+    }
+    @include media-breakpoint-up(md) {
+        min-width: 300px;
+        max-width: 450px;
+        float: right !important;
+        margin: 5px;
+    }
+    .news-img {
+        width: 100%;
+        height: auto;
     }
 }
 
