--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,7 @@
   <meta name="msapplication-TileImage" content="{{ "/ms-icon-144x144.png" | relative_url }}">
   <meta name="theme-color" content="#ffffff">
   {% seo %}
-  <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
   {% if jekyll.environment == 'production' and site.google_analytics %}
     {% include google-analytics.html %}
   {% endif %}
