begin gallery feature

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,5 +1,6 @@
 @import "overrides";
 @import "../node_modules/bootstrap/scss/bootstrap";
 @import "syntax";
+@import "gallery";
 @import "utilities";
 @import "theme";
