added year to copyright

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
         <!-- right -->
         <div class="d-flex flex-column align-items-center align-items-md-end">
           <div>
-              © {{ site.author }}
+              © 2018 {{ site.author }}
           </div>
           <div class="d-flex flex-column flex-lg-row align-items-center align-items-md-end">
             <small class="mr-lg-1">
