added gallery css

--- a/_includes/gallery-item.html
+++ b/_includes/gallery-item.html
@@ -1,4 +1,5 @@
 
-<div class="gallery-item">
-    {{ include.item.name }}
+<div class="gallery-item hover-shadow">
+    <!-- {{ include.item.name }} -->
+    <img src="{{ include.item.url }}"/>
 </div>
