small css fixes

--- a/_includes/gallery-item.html
+++ b/_includes/gallery-item.html
@@ -1,5 +1,5 @@
 
 <div class="gallery-item hover-shadow">
     <!-- {{ include.item.name }} -->
-    <img src="{{ include.item.url }}"/>
+    <img class="rounded" src="{{ include.item.url }}"/>
 </div>
