--- a/_includes/gallery-item.html
+++ b/_includes/gallery-item.html
@@ -1,5 +1,6 @@
 
-<div class="gallery-item hover-shadow">
+<div class="gallery-item hover-shadow overlay-container">
     <!-- {{ include.item.name }} -->
     <img class="rounded" src="{{ include.item.url }}"/>
+    <div class="overlay rounded-bottom">{{ include.item.name }}</div>
 </div>
