--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -6,6 +6,7 @@ layout: page
 <div class="gallery">
     {% comment %}
     Writing every 4th item in the column. Every iteration shifts the start item by one.
+    Images have to be all in same format.
     Example:
     Column1| Column2| Column3| Column4
     Item1  | Item2  | Item3  | Item4
