--- a/_sass/gallery.scss
+++ b/_sass/gallery.scss
@@ -3,11 +3,41 @@
     display: flex;
     -ms-flex-wrap: wrap; /*IE10*/
     flex-wrap: wrap;
+
+
+    /* Hover shadow */ //still to dump to get it work
+    .hover-shadow:after {
+        content: "";
+        box-shadow: 0 5px 15px 2px rgba(0, 0, 0, 0.3);
+        opacity: 0; /* hide the hover shadow */
+        transition: opacity 0.3s ease-in-out;
+    }
+    .hover-shadow:hover:after {
+        opacity: 1;
+    }
+
+    /* Overlay */
+    .overlay-container {
+        position: relative;
+    }
+    .overlay-container:hover .overlay {
+        opacity: 1;
+    }
+    .overlay {
+        position: absolute; 
+        bottom: 0; 
+        background: rgba(0, 0, 0, 0.5); /* Black see-through */
+        color: #f1f1f1; 
+        width: 100%;
+        transition: 1s ease;
+        opacity:0;
+        padding: 20px;
+        text-align: center;
+    }
 }
   
 .gallery-column {
     padding: 0 4px;
-    align-self: stretch;
     
     @include media-breakpoint-down(sm) {
         -ms-flex: 100%; /*IE10*/
@@ -29,16 +59,9 @@
 }
   
 .gallery-item {
-    vertical-align: middle;
     margin-top: 8px;
 
     img {
         width: 100%;
     }
-}
-  
-.hover-shadow :hover { // TODO add transition
-    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
