--- a/_sass/gallery.scss
+++ b/_sass/gallery.scss
@@ -4,18 +4,6 @@
     -ms-flex-wrap: wrap; /*IE10*/
     flex-wrap: wrap;
 
-
-    /* Hover shadow */ //still to dump to get it work
-    .hover-shadow:after {
-        content: "";
-        box-shadow: 0 5px 15px 2px rgba(0, 0, 0, 0.3);
-        opacity: 0; /* hide the hover shadow */
-        transition: opacity 0.3s ease-in-out;
-    }
-    .hover-shadow:hover:after {
-        opacity: 1;
-    }
-
     /* Overlay */
     .overlay-container {
         position: relative;
@@ -26,10 +14,10 @@
     .overlay {
         position: absolute; 
         bottom: 0; 
-        background: rgba(0, 0, 0, 0.5); /* Black see-through */
+        background: rgba(0, 0, 0, 0.85); /* Black see-through */
         color: #f1f1f1; 
         width: 100%;
-        transition: 1s ease;
+        transition: 0.75s ease;
         opacity:0;
         padding: 20px;
         text-align: center;
@@ -37,7 +25,7 @@
 }
   
 .gallery-column {
-    padding: 0 4px;
+    padding: 0 6px;
     
     @include media-breakpoint-down(sm) {
         -ms-flex: 100%; /*IE10*/
@@ -59,9 +47,9 @@
 }
   
 .gallery-item {
-    margin-top: 8px;
+    margin-top: 12px;
+}
 
-    img {
-        width: 100%;
-    }
+.gallery-img {
+    width: 100%;
 }
