--- a/_sass/utilities.scss
+++ b/_sass/utilities.scss
@@ -1,12 +1,15 @@
-.shadow-depth-1{
+.shadow-depth-0 {
+    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
+}
+.shadow-depth-1 {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
-.shadow-depth-2{
+.shadow-depth-2 {
     box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-.shadow-depth-3{
+.shadow-depth-3 {
     box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19); 
 }
-.shadow-depth-4{
+.shadow-depth-4 {
     box-shadow: 0 16px 28px 0 rgba(0, 0, 0, 0.22), 0 25px 55px 0 rgba(0, 0, 0, 0.21);
 }
