--- a/_sass/gallery.scss
+++ b/_sass/gallery.scss
@@ -10,16 +10,26 @@
     }
     .overlay-container:hover .overlay {
         opacity: 1;
+        transition: .5s ease .2s; // fade in
     }
     .overlay {
         position: absolute; 
-        bottom: 0; 
-        background: rgba(0, 0, 0, 0.85); /* Black see-through */
-        color: #f1f1f1; 
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
         width: 100%;
-        transition: 0.75s ease;
-        opacity:0;
-        padding: 20px;
+        height: 100%;
+        transition: 1.5s ease 1s; // fade out
+        opacity: 0;
+        background: rgba($color: black, $alpha: .80);
+    }
+    .overlay-text {
+        color: white;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         text-align: center;
     }
 }
