--- a/_sass/gallery.scss
+++ b/_sass/gallery.scss
@@ -10,7 +10,7 @@
     }
     .overlay-container:hover .overlay {
         opacity: 1;
-        transition: .5s ease .2s; // fade in
+        transition: .5s ease; // fade in
     }
     .overlay {
         position: absolute; 
@@ -20,7 +20,7 @@
         right: 0;
         width: 100%;
         height: 100%;
-        transition: 1.5s ease 1s; // fade out
+        transition: 1.5s ease .5s; // fade out
         opacity: 0;
         background: rgba($color: black, $alpha: .80);
     }
