--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -6,9 +6,9 @@ layout: page
 
 <div class="gallery">
     {% for item in site.data.gallery %}
-    <div class="gallery-item-container">
-        <div class="gallery-item rounded shadow-depth-0 overlay-container">
-            <!-- {{ item.name }} -->
+    <div id="item-{{ forloop.index }}" class="gallery-item-container" onclick="openLightbox()"
+        data-description="{{ item.description }}" data-name="{{ item.name }}" data-date="{{ item.date }}">
+        <div class="gallery-item rounded overlay-container">
             {% if item.url contains '://' %}
                 <img class="gallery-img rounded" src="{{ item.url }}" alt="{{ item.name }}"/>
             {% else %}
@@ -22,3 +22,10 @@ layout: page
     </div>
     {% endfor %}
 </div>
+<div id="lightbox" class="lightbox">
+    <span class="close cursor" onclick="closeLightbox()">&times;</span>
+    <div class="lightbox-content">
+        <h1>überaschung</h1>
+    </div>
+</div>
+<script src="{{ "/assets/js/gallery.js" | relativae_url }}"></script>
