--- a/_sass/gallery.scss
+++ b/_sass/gallery.scss
@@ -47,3 +47,40 @@
         text-align: center;
     }
 }
+
+.lightbox {
+    display: none;
+    position: fixed;
+    z-index: 1050;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba($color: white, $alpha: .95);
+
+    .lightbox-content {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
+
+    /* The Close Button */
+    .close {
+        color: black;
+        position: absolute;
+        top: 10px;
+        right: 25px;
+        font-size: 35px;
+        font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+        color: gray;
+        text-decoration: none;
+        cursor: pointer;
+    }
+}
