--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -6,7 +6,7 @@ layout: page
 
 <div class="gallery">
     {% for item in site.data.gallery %}
-    <div id="item-{{ forloop.index }}" class="gallery-item-container" onclick="openLightbox()"
+    <div id="item-{{ forloop.index }}" class="gallery-item-container" onclick="openLightbox({{ forloop.index }})"
         data-description="{{ item.description }}" data-name="{{ item.name }}" data-date="{{ item.date }}">
         <div class="gallery-item rounded overlay-container">
             {% if item.url contains '://' %}
@@ -22,10 +22,12 @@ layout: page
     </div>
     {% endfor %}
 </div>
+
 <div id="lightbox" class="lightbox">
-    <span class="close cursor" onclick="closeLightbox()">&times;</span>
+    <div class="close cursor" onclick="closeLightbox()"></div>
     <div class="lightbox-content">
-        <h1>überaschung</h1>
+        
     </div>
 </div>
+
 <script src="{{ "/assets/js/gallery.js" | relativae_url }}"></script>
