added lightbox img

--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -16,7 +16,7 @@ layout: page
             {% endif %}
             
             <div class="overlay rounded">
-                <div class="overlay-text">{{ item.name }}</div>
+                <div class="overlay-text h4">{{ item.name }}</div>
             </div>
         </div>
     </div>
@@ -24,9 +24,9 @@ layout: page
 </div>
 
 <div id="lightbox" class="lightbox">
-    <div class="close cursor" onclick="closeLightbox()"></div>
-    <div class="lightbox-content">
-        
+    <div class="close" onclick="closeLightbox()"></div>
+    <div class="lightbox-content container">
+        <img class="lightbox-img"/>
     </div>
 </div>
 
