--- a/_sass/gallery.scss
+++ b/_sass/gallery.scss
@@ -36,10 +36,10 @@
         height: 100%;
         transition: 1.5s ease .3s; // fade out
         opacity: 0;
-        background: rgba($color: black, $alpha: .80);
+        background: rgba($color: white, $alpha: .95);
     }
     .overlay-text {
-        color: white;
+        color: black;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -57,14 +57,21 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba($color: white, $alpha: .95);
+    background-color: rgba($color: white, $alpha: .97);
 
     .lightbox-content {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
+        height: 100%;
+    }
+
+    // position image in the middle
+    .lightbox-img {
+        display: block;
+        height: 90%;
+        width: auto;
+        max-width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: 5%;
     }
 
     /* The Close Button */
