added animated arrows

--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -25,9 +25,9 @@ layout: page
 
 <div id="lightbox" class="lightbox">
     <div class="close" onclick="closeLightbox()"></div>
+    <div class="next arrow" onclick="">&#10095;</div>
+    <div class="prev arrow" onclick="">&#10094;</div>
     <div class="lightbox-content container">
         <img class="lightbox-img"/>
     </div>
 </div>
-
-<script src="{{ "/assets/js/gallery.js" | relativae_url }}"></script>
