--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,6 +1,7 @@
 @import "overrides";
 @import "../node_modules/bootstrap/scss/bootstrap";
 @import "syntax";
+@import "animations";
 @import "gallery";
 @import "utilities";
 @import "theme";
