reformat some shit

--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -27,14 +27,12 @@ layout: page
     <div class="lightbox-close" onclick="closeLightbox()"></div>
     <div class="arrow left">
         <svg viewBox="0 0 50 80" xml:space="preserve">
-            <polyline fill="none" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" points="
-            45.63,75.8 0.375,38.087 45.63,0.375 "/>
+            <polyline fill="none" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" points="45.63,75.8 0.375,38.087 45.63,0.375 "/>
         </svg>  
     </div>
     <div class="arrow right">
         <svg viewBox="0 0 50 80" xml:space="preserve">
-            <polyline fill="none" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" points="
-            0.375,0.375 45.63,38.087 0.375,75.8 "/>
+            <polyline fill="none" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" points="0.375,0.375 45.63,38.087 0.375,75.8 "/>
         </svg>
     </div>
     <div class="lightbox-content container">
