--- a/_sass/gallery.scss
+++ b/_sass/gallery.scss
@@ -49,6 +49,14 @@
 }
 
 .lightbox {
+    /* because of fu thats why */
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
     display: none;
     position: fixed;
     z-index: 1050;
