--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,6 +2,7 @@
 @import "../node_modules/bootstrap/scss/bootstrap";
 @import "syntax";
 @import "animations";
+@import "news";
 @import "gallery";
 @import "utilities";
 @import "theme";
