--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,9 @@
     <div class="container border-top mt-5 py-3">
       <div class="d-flex flex-column flex-md-row align-items-center justify-content-between">
         <!-- left -->
-        <div class="d-flex flex-column flex-lg-row mb-3 mb-md-0">
+        <div class="footer-sibling-fade d-flex flex-column flex-lg-row mb-3 mb-md-0">
           {% for network in site.data.social %}
-            <a class="d-flex flex-row align-items-center px-3" href="{{ network.url }}" target="_blank">
+            <a class="footer-sibling d-flex flex-row align-items-center px-3" href="{{ network.url }}" target="_blank">
               <svg class="social-icon">
                 <use xlink:href="/assets/img/icons.svg#{{ network.code }}"></use>
               </svg>
