--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -8,7 +8,15 @@ body {
     padding-top: 75px; //padding to fixed top nav
 }
 
-// navbar logo size 
+// navbar
+@include media-breakpoint-up(lg) {
+    .nav-sibling {
+        transition: opacity 0.5s;
+    }
+    .nav-sibling-fade:hover .nav-sibling:not(:hover) {
+        opacity: .4;
+    }
+}
 .logo {
     width: 35px;
     height: 35px;
@@ -31,5 +39,3 @@ body {
         height: 16px;
     }
 }
-
-
