--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,3 +1,9 @@
+{% comment %}
+use this snippet to integrate this tag
+{% if jekyll.environment == 'production' and site.google_analytics %}
+{% include google-analytics.html %}
+{% endif %}
+{% endcomment %}
 <script>
     if(!(window.doNotTrack === "1" || navigator.doNotTrack === "1" || navigator.doNotTrack === "yes" || navigator.msDoNotTrack === "1")) {
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
