--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,16 +15,20 @@
         <!-- right -->
         <div class="d-flex flex-column align-items-center align-items-md-end">
           <div>
-              © 2018 {{ site.author }}
+            © 2018 {{ site.author }}
           </div>
           <div class="d-flex flex-column flex-lg-row align-items-center align-items-md-end">
             <small class="mr-lg-1">
-              Software licensed under
-              <a href="https://choosealicense.com/licenses/mit/" target="_blank">MIT</a>
+                Software licensed under
+                <a href="https://choosealicense.com/licenses/mit/" target="_blank">MIT</a>
+            </small>
+            <small class="mr-lg-1">
+                Content and Media licensed under
+                <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC BY-NC-ND 4.0</a>
             </small>
             <small>
-              Content and Media licensed under
-              <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC BY-NC-ND 4.0</a>
+                <div class="d-none d-lg-inline"> - </div>
+                <a href="{{ "/imprint" | relative_url }}">Imprint</a> 
             </small>
           </div>
         </div>
