fixed some small issues

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
                 <a href="https://choosealicense.com/licenses/mit/" target="_blank">MIT</a>
             </small>
             <small class="mr-lg-1">
-                Content and Media licensed under
+                Media licensed under
                 <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC BY-NC-ND 4.0</a>
             </small>
             <small>
