--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: master
 ---
 
 <div class="d-flex flex-column flex-md-row justify-content-around my-auto">
-    <img class="home-img" src="{{ "/assets/img/bumpels/bumpel_george.svg" | relative_url }}"/>
-    <img class="home-img" src="{{ "/assets/img/bumpels/bumpel_emmy.svg" | relative_url }}"/>
-    <img class="home-img" src="{{ "/assets/img/bumpels/bumpel_wilson.svg" | relative_url }}"/>
+    <img class="home-img" src="{{ "/assets/img/bumpels/bumpel_george.svg" | relative_url }}" alt="George"/>
+    <img class="home-img" src="{{ "/assets/img/bumpels/bumpel_emmy.svg" | relative_url }}" alt="Emmy"/>
+    <img class="home-img" src="{{ "/assets/img/bumpels/bumpel_wilson.svg" | relative_url }}" alt="Wislon"/>
 </div>
