--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,4 +22,5 @@
   <meta name="theme-color" content="#ffffff">
   {% seo %}
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/css/social.css" | relative_url }}">
 </head>
