--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -57,7 +57,7 @@ $inverse-color: $gray-600 !default;
 html {
     height: 100%;
 }
-body {
+body, #___gatsby, #gatsby-focus-wrapper {
     height: 100%;
     min-height: 100%;
     //padding-top: 75px; //padding to fixed top nav
