--- a/_sass/gallery.scss
+++ b/_sass/gallery.scss
@@ -1,154 +1,157 @@
 .gallery {
+  .gallery-item-container {
+    padding: 4px;
+    float: left;
+    @include media-breakpoint-down(sm) {
+      width: 100%;
+    }
+    @include media-breakpoint-only(md) {
+      width: 50%;
+    }
+    @include media-breakpoint-up(lg) {
+      width: 25%;
+    }
+  }
 
-    .gallery-item-container {
-        padding: 4px;
-        float: left;
-        @include media-breakpoint-down(sm) {
-            width: 100%;
-        }
-        @include media-breakpoint-only(md) {
-            width: 50%;
-        }
-        @include media-breakpoint-up(lg) {
-            width: 25%;
-        }
-    }
-    
-    .gallery-img {
-        width: 100%;
-    }
+  .gallery-img {
+    width: 100%;
+  }
 
-    /* Overlay */
-    .overlay-container {
-        position: relative;
+  /* Overlay */
+  .overlay-container {
+    position: relative;
+  }
+  .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    transition: 1.5s ease 0.3s; // fade out
+    opacity: 0;
+    background: rgba($color: white, $alpha: 0.95);
+  }
+  .overlay-text {
+    color: black;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  @media (hover: hover), (-moz-touch-enabled: 0) {
+    // activate only when the device can hover
+    .overlay-container:hover .overlay {
+      opacity: 1;
+      transition: 0.5s ease; // fade in
     }
-    .overlay {
-        position: absolute; 
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-        transition: 1.5s ease .3s; // fade out
-        opacity: 0;
-        background: rgba($color: white, $alpha: .95);
-    }
-    .overlay-text {
-        color: black;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
-    }
-    @media (hover: hover), (-moz-touch-enabled:0) { // activate only when the device can hover
-        .overlay-container:hover .overlay {
-            opacity: 1;
-            transition: .5s ease; // fade in
-        }
-    }
+  }
 }
 
 .lightbox {
-    /* because of fu thats why */
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+  /* because of fu thats why */
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 
-    display: none;
-    position: fixed;
-    z-index: 1050;
-    left: 0;
-    top: 0;
-    width: 100%;
+  display: none;
+  position: fixed;
+  z-index: 1050;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba($color: white, $alpha: 0.97);
+
+  .lightbox-content {
     height: 100%;
-    overflow: auto;
-    background-color: rgba($color: white, $alpha: .97);
+  }
 
-    .lightbox-content {
-        height: 100%;
-    }
+  // position image in the middle
+  .lightbox-img {
+    display: block;
+    height: 90%;
+    width: auto;
+    max-width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 5%;
+  }
 
-    // position image in the middle
-    .lightbox-img {
-        display: block;
-        height: 90%;
-        width: auto;
-        max-width:95%;
-        margin-left: auto;
-        margin-right: auto;
-        padding-top: 5%;
-    }
+  /* The Close Button */
+  .lightbox-close {
+    $size: 20px;
+    cursor: pointer;
+    color: black;
+    top: 10px;
+    right: 10px;
+    height: $size;
+    width: $size;
+    position: relative;
+    box-sizing: border-box;
+    line-height: $size;
+    float: right;
 
-    /* The Close Button */
-    .lightbox-close {
-        $size: 20px;
-        cursor: pointer;
-        color: black;
-        top: 10px;
-        right: 10px;
-        height: $size;
-        width: $size;
-        position: relative;
-        box-sizing: border-box;
-        line-height: $size;
-        float: right;
+    &:before,
+    &:after {
+      $width: 20px;
+      $height: 2px;
+      transform: rotate(-45deg);
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin-top: -$height/2;
+      margin-left: -$width/2;
+      display: block;
+      height: $height;
+      width: $width;
+      background-color: black;
+      transition: all 0.25s ease-out;
+    }
+    &:after {
+      transform: rotate(-135deg);
+    }
+    &:hover {
+      &:before,
+      &:after {
+        transform: rotate(0deg);
+      }
+    }
+  }
 
-        &:before, &:after {
-            $width: 20px;
-            $height: 2px;
-            transform: rotate(-45deg);
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            margin-top: -$height/2;
-            margin-left: -$width/2;
-            display: block;
-            height: $height;
-            width: $width;
-            background-color: black;
-            transition: all 0.25s ease-out;
-        }
-        &:after {
-            transform: rotate(-135deg);
-        }
-        &:hover {
-            &:before, &:after {
-                transform: rotate(0deg);
-            }
-        }
+  /* Next & previous buttons */
+  .arrow {
+    cursor: pointer;
+    position: absolute;
+    top: 45%;
+  }
+  .left {
+    left: 10px;
+  }
+  .right {
+    right: 10px;
+  }
+  @media (hover: hover), (-moz-touch-enabled: 0) {
+    // activate only when the device can hover
+    .right:hover polyline,
+    .left:hover polyline {
+      stroke-width: 6;
     }
-
-    /* Next & previous buttons */
-    .arrow {
-        cursor: pointer;
-        position: absolute;
-        top: 45%;
-    }
-    .left {
-        left: 10px;
-    }
-    .right {
-        right: 10px;
-    }
-    @media (hover: hover), (-moz-touch-enabled:0) { // activate only when the device can hover
-        .right:hover polyline,
-        .left:hover polyline {
-            stroke-width: 6;
-        }
-    }
-    polyline {
-        stroke: black;
-        transition: all 250ms ease-in-out;
-    }
-    svg {
-        padding: 2px;
-        width: 20px;
-        height: 40px;
-    }
+  }
+  polyline {
+    stroke: black;
+    transition: all 250ms ease-in-out;
+  }
+  svg {
+    padding: 2px;
+    width: 20px;
+    height: 40px;
+  }
 }
