--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -1,72 +1,72 @@
 @import "../styles/global.scss";
 
 .footer {
-    // text
-    font-weight: $font-weight-light;
-    color: $gray-600;
+  // text
+  font-weight: $font-weight-light;
+  color: $gray-600;
 
-    .container {
-        margin-top: 3rem;
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-        border-top: 1px solid $gray-300;
+  .container {
+    margin-top: 3rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    border-top: 1px solid $gray-300;
 
-        .content {
-            display: flex;
-            flex-direction: column;
-            @include media-breakpoint-up(sm) {
-                flex-direction: row;
-            }
-            align-items: center;
-            justify-content: space-between;
+    .content {
+      display: flex;
+      flex-direction: column;
+      @include media-breakpoint-up(sm) {
+        flex-direction: row;
+      }
+      align-items: center;
+      justify-content: space-between;
 
-            .social {
-                display: flex;
-                flex-direction: column;
-                @include media-breakpoint-up(lg) {
-                    flex-direction: row;
-                }
-                margin-bottom: 1rem;
-                @include media-breakpoint-up(sm) {
-                    margin-bottom: 0;
-                }
-    
-                a {
-                    align-items: center;
-                    padding-left: .8rem;
-                    padding-right: .8rem;
-                }
-            }
-
-            .licenses {
-                display: flex;
-                flex-direction: column;
-                @include media-breakpoint-up(lg) {
-                    flex-direction: row;
-                }
-                align-items: center;
-                @include media-breakpoint-up(sm) {
-                    align-items: flex-end;
-                }
-
-                .license {
-                    @include media-breakpoint-up(lg) {
-                        margin-right: .25rem;
-                    }
-                }
-
-                .spacer {
-                    display: none;
-                    @include media-breakpoint-up(lg) {
-                        display: inline;
-                    }
-                }
-            }
+      .social {
+        display: flex;
+        flex-direction: column;
+        @include media-breakpoint-up(lg) {
+          flex-direction: row;
         }
-    }
+        margin-bottom: 1rem;
+        @include media-breakpoint-up(sm) {
+          margin-bottom: 0;
+        }
 
-    a {
-        color: $gray-800;
-        fill: $gray-800;
+        a {
+          align-items: center;
+          padding-left: 0.8rem;
+          padding-right: 0.8rem;
+        }
+      }
+
+      .licenses {
+        display: flex;
+        flex-direction: column;
+        @include media-breakpoint-up(lg) {
+          flex-direction: row;
+        }
+        align-items: center;
+        @include media-breakpoint-up(sm) {
+          align-items: flex-end;
+        }
+
+        .license {
+          @include media-breakpoint-up(lg) {
+            margin-right: 0.25rem;
+          }
+        }
+
+        .spacer {
+          display: none;
+          @include media-breakpoint-up(lg) {
+            display: inline;
+          }
+        }
+      }
     }
+  }
+
+  a {
+    color: $gray-800;
+    fill: $gray-800;
+  }
 }
