--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -48,19 +48,23 @@ $inverse-color: $gray-600 !default;
 
 // Fonts
 //
-@import './fonts.scss';
+@import "./fonts.scss";
 
-@import 'node_modules/bootstrap/scss/bootstrap.scss';
-
+@import "node_modules/bootstrap/scss/bootstrap.scss";
 
 // full height page
 html {
-    height: 100%;
+  height: 100%;
 }
-body, #___gatsby, #gatsby-focus-wrapper {
+body {
+  padding-top: 75px; //padding to fixed top nav
+
+  &,
+  #___gatsby,
+  #gatsby-focus-wrapper {
     height: 100%;
     min-height: 100%;
-    //padding-top: 75px; //padding to fixed top nav
+  }
 }
 
 * {
@@ -75,7 +79,7 @@ p {
 }
 
 // add margin to inline icons
-.svg-inline--fa{
-    margin-left: .2em;
-    margin-right: .2em;
+.svg-inline--fa {
+  margin-left: 0.2em;
+  margin-right: 0.2em;
 }
