migrate about and imprint

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -78,6 +78,10 @@ p {
   margin-bottom: 20px;
 }
 
+a {
+  color: $gray-900;
+}
+
 // add margin to inline icons
 .svg-inline--fa {
   margin-left: 0.2em;
