--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -72,6 +72,17 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1 {
+  color: $gray-900;
+}
+
+h2,
+h3,
+h4,
+h5 {
+  color: $gray-800;
+}
+
 p {
   font-size: 16px;
   line-height: 1.5;
