--- a/src/templates/post.module.scss
+++ b/src/templates/post.module.scss
@@ -2,13 +2,61 @@
 
 .post {
   .header {
-    h1 {
-      margin-bottom: 0rem;
+    padding-bottom: 3rem;
+    .headerText {
+      margin-bottom: 1rem;
+      h1 {
+        margin-bottom: 0;
+      }
+      small {
+        color: $gray-600;
+      }
     }
-    small {
-      color: $gray-600;
+    .headerImage {
+      margin-left: 15px;
+      margin-right: 15px;
     }
     font-weight: $font-weight-light;
-    margin-bottom: 2.5rem;
+  }
+  .imageDescription {
+    float: right;
+    margin-right: 1.3rem;
+    font-weight: $font-weight-light;
+  }
+  @include media-breakpoint-up(lg) {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+
+    .header {
+      padding-left: 15px;
+      padding-right: 15px;
+      position: relative;
+
+      .headerText {
+        position: absolute;
+        top: 50px;
+        left: -30px;
+        z-index: 1;
+        h1 {
+          border-radius: 0.15rem;
+          padding: 2px 9px;
+          width: fit-content;
+          background-color: $white;
+          margin-bottom: 0.2rem;
+        }
+        small {
+          border-radius: 0.15rem;
+          padding: 3px 7px;
+          background-color: rgba($color: $white, $alpha: 0.9);
+        }
+      }
+      .headerImage {
+        margin: 0;
+      }
+    }
+    .imageDescription {
+      margin-right: 0.3rem;
+    }
   }
 }
